# edk2-rs

./: .gitmodules  Cargo.toml  README.md  flake.nix
.cargo/: config
example/: Cargo.toml
example/src/: main.rs
lib/: Cargo.toml  build.rs
lib/src/: glue.h  lib.rs  uefi.h
lib/src/glue/: guid.c
